# stripe-docs-rag

./: .env.example  .gitignore  EXPLANATION_SCRIPT.md  PLACEHOLDERS.md  README.md  demo_output.json  demo_results.txt  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  mcp_server.py
app/agent/: guards.py  postgres_session_manager.py  response_synthesizer.py  runtime.py  session_manager.py  tool_registry.py
app/api/: auth.py  deps.py  middleware.py  routes_chat.py  routes_evals.py  routes_health.py  routes_ingest.py  routes_search.py  routes_sessions.py  routes_traces.py
app/core/: config.py  exceptions.py  logging.py
app/db/: connection.py  migrate.py  pgvector_queries.py  postgres_store.py  repositories.py
app/domain/: schemas.py
app/evals/: llm_judge.py
app/ingestion/: chunker.py  crawler.py  crawler_service.py  embedder.py  indexer.py  ingest_service.py  normalizer.py  parser.py
app/retrieval/: citation_builder.py  inmemory_retriever.py  metadata_filters.py  pipeline.py  query_rewriter.py  reranker.py  retriever.py  types.py
app/services/: chat_service.py  eval_dataset.py  eval_service.py  ingest_service.py  search_service.py  session_service.py
app/tools/: citation_sourcer.py  search_tool.py  source_ranker.py
reference/: stripe-rag-architecture-blueprint.md
scratch/: fetch.py  readonly_setup.sql  test_db.py  test_html_parser.py  test_llm.py  test_reqs.txt  test_search.py  truncate.py
scripts/: configure_llm.py  demo.py  ingest_all.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
tests/smoke/: test_health.py
(+24 files in other folders)
